# Tennis-Refactoring-Kata

python/: .pre-commit-config.yaml  README.md  pyproject.toml
python/tennis/: tennis1.py  tennis2.py  tennis3.py  tennis4.py  tennis5.py  tennis6.py
python/tests/: tennis_test.py  tennis_unittest.py
