[tool.poetry]
name = "tennis"
version = "0.1.0"
description = "Tennis refactoring kata."
authors = ["Tyson Liddell <tysonliddell@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
